src/objects/QIRS_Product_Identification__c.object
<CustomObject>
    <description>It will have product details like Technology, Group, Name, APC(account product code), catalog user.</description>
    <fields>
        <fullName>ClassAccess__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ClassAccess</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Launch_Date__c</fullName>
        <inlineHelpText>P7 milestone or Ship Acceptance date</inlineHelpText>
        <label>Launch Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PKSF_ItemCode__c</fullName>
        <externalId>true</externalId>
        <label>PKSF_ItemCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <description>Product Name</description>
        <label>Product Name</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QIRS__c</fullName>
        <label>QIRS</label>
        <referenceTo>QIRS__c</referenceTo>
        <relationshipName>Product_Identification</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Release_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Release Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Technology__c</fullName>
        <description>Product Technology</description>
        <label>Technology</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Product Identification</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Product PN</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Identification</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>QIRS_Status_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>IF( ISPICKVAL( QIRS__r.Status__c , &apos;Closed&apos;) || 
ISPICKVAL( QIRS__r.Status__c , &apos;Submited to Master Approval&apos;) , true, false)</errorConditionFormula>
        <errorMessage>Unable to add product as status of QIRS either Closed or Submitted to Master Approval.</errorMessage>
    </validationRules>
</CustomObject>